修改元数据

--- a/source/_posts/霍格沃茨禁止御剑飞行/01_002_第二章_“级长”选拔.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_002_第二章_“级长”选拔.md
@@ -1,8 +1,14 @@
 ---
+# layout
 title: 霍格沃茨禁止御剑飞行 第二章 “级长”选拔 徐一玄
-tags: HP,哈利波特,同人,无CP,科察博,斯莱文,徐一玄
 author: 徐一玄Brenda
 date: 2020-03-13
+# updated
+# comments
+tags: [HP,哈利波特,无CP,斯莱文]
+# categories
+# permalink
+# id
 ---
 # 霍格沃茨禁止御剑飞行
 
