--- a/source/_posts/霍格沃茨禁止御剑飞行/00_000_避雷预警.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/00_000_避雷预警.md
@@ -1,8 +1,14 @@
 ---
+# layout
 title: 霍格沃茨禁止御剑飞行 避雷预警 徐一玄
-tags: HP,哈利波特,同人,无CP,科察博,斯莱文,徐一玄
 author: 徐一玄Brenda
 date: 2020-03-10
+# updated
+# comments
+tags: [HP,哈利波特,无CP,斯莱文]
+# categories
+# permalink
+# id
 ---
 # 霍格沃茨禁止御剑飞行
 
@@ -51,11 +57,7 @@ date: 2020-03-10
 
 对以上内容不适者请自主避雷。
 
-不过，假如你好奇心过于旺盛，忍不住要看，被雷了。
-
-请尽管吐槽：你为什么被雷，你觉得哪里写得烂。
-
-别上升到人身攻击就好。
+假如您好奇心过于旺盛，忍不住要看，为保障您的生命与健康安全，请自行配备避雷针。
 
 <div style="background:#252525;padding:10px">
 <span class="heimu">
