--- a/source/_posts/霍格沃茨禁止御剑飞行/01_000_目录.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_000_目录.md
@@ -1,8 +1,14 @@
 ---
+# layout
 title: 霍格沃茨禁止御剑飞行 目录 徐一玄
-tags: HP,哈利波特,同人,无CP,科察博,斯莱文,徐一玄
 author: 徐一玄Brenda
 date: 2020-03-10
+# updated
+# comments
+tags: [HP,哈利波特,无CP,斯莱文]
+# categories
+# permalink
+# id
 ---
 <center>
 
