修改元数据

--- a/source/_posts/霍格沃茨禁止御剑飞行/00_000_避雷预警.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/00_000_避雷预警.md
@@ -1,14 +1,14 @@
 ---
 # layout
-title: 霍格沃茨禁止御剑飞行 避雷预警 徐一玄
+title: 避雷预警
 author: 徐一玄Brenda
 date: 2020-03-10
 # updated
 # comments
 tags: [HP,哈利波特,无CP,斯莱文]
-# categories
+categories: 霍格沃茨禁止御剑飞行
 # permalink
-# id
+id: 00_000
 ---
 # 霍格沃茨禁止御剑飞行
 
