--- a/source/_posts/霍格沃茨禁止御剑飞行/01_004_第四章_厚颜无耻.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_004_第四章_厚颜无耻.md
@@ -1,14 +1,14 @@
 ---
 # layout
-title: 霍格沃茨禁止御剑飞行 第四章 厚颜无耻 徐一玄
+title: 第四章 厚颜无耻
 author: 徐一玄Brenda
 date: 2020-03-22
 # updated
 # comments
 tags: [HP,哈利波特,无CP,斯莱文]
-# categories
+categories: 霍格沃茨禁止御剑飞行
 # permalink
-# id
+id: 01_004
 ---
 # 霍格沃茨禁止御剑飞行
 
