--- a/source/_posts/霍格沃茨禁止御剑飞行/01_001_第一章_你听我解释……算了.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_001_第一章_你听我解释……算了.md
@@ -1,14 +1,14 @@
 ---
 # layout
-title: 霍格沃茨禁止御剑飞行 第一章 你听我解释……算了 徐一玄
+title: 第一章 你听我解释……算了
 author: 徐一玄Brenda
 date: 2020-03-10
 # updated
 # comments
 tags: [HP,哈利波特,无CP,斯莱文]
-# categories
+categories: 霍格沃茨禁止御剑飞行
 # permalink
-# id
+id: 01_001
 ---
 # 霍格沃茨禁止御剑飞行
 
