--- a/source/_posts/霍格沃茨禁止御剑飞行/01_002_第二章_“级长”选拔.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_002_第二章_“级长”选拔.md
@@ -1,14 +1,14 @@
 ---
 # layout
-title: 霍格沃茨禁止御剑飞行 第二章 “级长”选拔 徐一玄
+title: 第二章 “级长”选拔
 author: 徐一玄Brenda
 date: 2020-03-13
 # updated
 # comments
 tags: [HP,哈利波特,无CP,斯莱文]
-# categories
+categories: 霍格沃茨禁止御剑飞行
 # permalink
-# id
+id: 01_002
 ---
 # 霍格沃茨禁止御剑飞行
 
