--- a/source/_posts/霍格沃茨禁止御剑飞行/01_003_第三章_喜提禁闭.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_003_第三章_喜提禁闭.md
@@ -1,14 +1,14 @@
 ---
 # layout
-title: 霍格沃茨禁止御剑飞行 第三章 喜提禁闭 徐一玄
+title: 第三章 喜提禁闭
 author: 徐一玄Brenda
 date: 2020-03-18
 # updated
 # comments
 tags: [HP,哈利波特,无CP,斯莱文]
-# categories
+categories: 霍格沃茨禁止御剑飞行
 # permalink
-# id
+id: 01_003
 ---
 # 霍格沃茨禁止御剑飞行
 
