--- a/source/_posts/霍格沃茨禁止御剑飞行/01_005_第五章_过于仁慈.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_005_第五章_过于仁慈.md
@@ -1,14 +1,14 @@
 ---
 # layout
-title: 霍格沃茨禁止御剑飞行 第五章 过于仁慈 徐一玄
+title: 第五章 过于仁慈
 author: 徐一玄Brenda
 date: 2020-03-27
 # updated
 # comments
 tags: [HP,哈利波特,无CP,斯莱文]
-# categories
+categories: 霍格沃茨禁止御剑飞行
 # permalink
-# id
+id: 01_005
 ---
 # 霍格沃茨禁止御剑飞行
 
