--- a/source/_posts/霍格沃茨禁止御剑飞行/01_000_目录.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/01_000_目录.md
@@ -30,7 +30,7 @@ Copyright & Disclaimer
 
 ## 目录
 
-[避雷预警](00_000_避雷预警.html)
+[避雷预警](../00_000_避雷预警)
 
 [第一章&nbsp;&nbsp;你听我解释……算了](01_001_第一章_你听我解释……算了.html)
 
