修改md文件结构

--- a/source/_posts/霍格沃茨禁止御剑飞行/000-目录.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/000-目录.md
@@ -8,7 +8,7 @@ date: 2020-03-10
 tags: [HP,哈利波特,无CP,斯莱文]
 categories: 霍格沃茨禁止御剑飞行
 # permalink
-id: 01_000
+id: 01-000
 ---
 <center>
 
@@ -30,17 +30,17 @@ Copyright & Disclaimer
 
 ## 目录
 
-[避雷预警](../00_000_避雷预警)
+[避雷预警](../0000-避雷预警)
 
-[第一章&nbsp;&nbsp;你听我解释……算了](01_001_第一章_你听我解释……算了.html)
+[第一章&nbsp;&nbsp;你听我解释……算了](../001-第一章-你听我解释……算了.html)
 
-[第二章&nbsp;&nbsp;“级长”选拔](01_002_第二章_“级长”选拔.html)
+[第二章&nbsp;&nbsp;“级长”选拔](../002-第二章-“级长”选拔.html)
 
-[第三章&nbsp;&nbsp;喜提禁闭](01_003_第三章_喜提禁闭.html)
+[第三章&nbsp;&nbsp;喜提禁闭](../003-第三章-喜提禁闭.html)
 
-[第四章&nbsp;&nbsp;厚颜无耻](01_004_第四章_厚颜无耻.html)
+[第四章&nbsp;&nbsp;厚颜无耻](../004-第四章-厚颜无耻.html)
 
-[第五章&nbsp;&nbsp;过于仁慈](01_005_第五章_过于仁慈.html)
+[第五章&nbsp;&nbsp;过于仁慈](../005-第五章-过于仁慈.html)
 
-*[@_@]:[第六章&nbsp;&nbsp;雷电法王](01_006_第六章_雷电法王.html)
+*[@-@]:[第六章&nbsp;&nbsp;雷电法王](../006-第六章-雷电法王.html)
 </div>
