--- a/source/_posts/霍格沃茨禁止御剑飞行/0000_避雷预警.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/0000_避雷预警.md
@@ -8,7 +8,7 @@ date: 2020-03-10
 tags: [HP,哈利波特,无CP,斯莱文]
 categories: 霍格沃茨禁止御剑飞行
 # permalink
-id: 00_000
+id: 0000
 ---
 # 霍格沃茨禁止御剑飞行
 
@@ -16,8 +16,10 @@ id: 00_000
 
 <div class="footnote">
 
-## 避雷预警
----
+<font size=6>避雷预警</font>
+<hr>
+对以下内容不适者，请自主避雷。
+
 原创男主
 姓名：Kochab Slevin（科察博·斯莱文）
 学院：斯莱特林
@@ -53,29 +55,23 @@ id: 00_000
 
 10.除了反派和龙套之外，没有人会死。
 
-<br>
 
-对以上内容不适者请自主避雷。
 
-假如您好奇心过于旺盛，忍不住要看，为保障您的生命与健康安全，请自行配备避雷针。
+假如您好奇心过于旺盛，再雷也忍不住要看，为保障您的生命与健康安全，请自行配备避雷针。
 
 <div style="background:#252525;padding:10px">
 <span class="heimu">
 如果尖锐的批评完全消失，温和的批评将会变得刺耳。如果温和的批评也不被允许，沉默将被认为居心叵测。如果沉默也不再允许，赞扬不够卖力将是一种罪行。如果只允许一种声音存在，那么，唯一存在的那个声音就是谎言。
 </span>
 </div>
-<br>
 </div>
-
-<br>
 
 <center>
 
-[目录](01_000_目录.html) [第一章](01_001_第一章_你听我解释……算了.html)
+[目录](../000-目录) [第一章](../001-第一章-你听我解释……算了)
 </center>
 
 <font color=gray size=2>
-
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
