--- a/source/_posts/霍格沃茨禁止御剑飞行/001-第一章-你听我解释……算了.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/001-第一章-你听我解释……算了.md
@@ -10,11 +10,9 @@ categories: 霍格沃茨禁止御剑飞行
 # permalink
 id: 01_001
 ---
-# 霍格沃茨禁止御剑飞行
 
 *by 徐一玄*
 
-## 第一章 你听我解释……算了
 ---
 列车到站后，德拉科·马尔福和他的两个跟班是最后赶到湖边的。
 
@@ -73,7 +71,6 @@ id: 01_001
 “不清楚。”罗恩回答说，“不过如果有人想修理马尔福一顿，我一定会忍不住加入的。”这时船停了，他们已经抵达了霍格沃茨城堡的地下码头。
 
 <br>
-<br>
 
 “科察博·斯莱文！”分院仪式上，麦格教授终于念到了最后一个<span id="[1]原文"><sup>[[1]](#[1])</sup>学生的名字，有点拗口。
 排在队伍最后的那个白发男生走到分院帽前。没有拿着他的行李箱，不知道是什么时候放在哪了。
@@ -125,18 +122,17 @@ id: 01_001
 <br>
 
 <div class="footnote">
+<font size=5>余音</font>
 
-### 余音
----
 血人巴罗看了看斯莱文和马尔福之间两英尺的空位，满意地飘了过去。
+
 </div>
 
 <br>
 
 <div class="footnote">
+<font size=5>注释</font>
 
-### 注释
----
 <span id="[1]">[[1]](#[1]原文)原著中，分院仪式的名单按姓氏字母排序，斯莱文应排在中间。此处为方便描写将他放到最后一位，就当是异国学生比较特殊吧。
 参见《哈利·波特与魔法石》第七章 分院帽
 
@@ -152,11 +148,10 @@ id: 01_001
 
 <center>
 
-[避雷预警](00_000_避雷预警.html) [目录](01_000_目录.html) [下一章](01_002_第二章_“级长”选拔.html)
+[避雷预警](00_000_避雷预警) [目录](01_000_目录) [下一章](01_002_第二章_“级长”选拔)
+
 </center>
-
 <font color=gray size=2>
-
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
