修改md文件结构

--- a/source/_posts/霍格沃茨禁止御剑飞行/0000_避雷预警.md
+++ b/source/_posts/霍格沃茨禁止御剑飞行/0000_避雷预警.md
@@ -1,33 +1,33 @@
 ---
-# layout
+layout: post
 title: 避雷预警
 author: 徐一玄Brenda
 date: 2020-03-10
-# updated
-# comments
+updated: 2020-03-10
+comments: true
 tags: [HP,哈利波特,无CP,斯莱文]
-categories: 霍格沃茨禁止御剑飞行
+categories:
+  - 同人
+  - 霍格沃茨禁止御剑飞行
 # permalink
-id: 0000
+id: "0000"
 ---
-# 霍格沃茨禁止御剑飞行
+<font size=5 style="font-weight:bold">霍格沃茨禁止御剑飞行</font>
 
-*by 徐一玄*
+<br>*by 徐一玄*
 
 <div class="footnote">
 
-<font size=6>避雷预警</font>
+<font size=5>对以下内容不适者，请注意自主避雷。</font>
 <hr>
-对以下内容不适者，请自主避雷。
-
 原创男主
 姓名：Kochab Slevin（科察博·斯莱文）
 学院：斯莱特林
 血统：华裔、纯血
 
-1.本文无CP（或者说符合原著CP但我没兴趣写感情戏）。
+1.本文无CP（或者说符合原著CP但没什么感情戏）。
 但男主是**同性恋**，并且喜欢单方面尬撩原著角色。见一个撩一个。
-不过他再怎么撩,原著角色也不会理他。
+不过他再怎么撩，原著角色也不会理他。
 
 2.男主喜欢**乱拉CP**，不过均为调侃性质。
 举例：男主会调侃德拉科每天闲的没事专门盯着哈利找茬，是不是暗恋哈利。
@@ -47,7 +47,7 @@ id: 0000
 实际上，本文对大多数蛇院学生的描写都不太友好。
 **蛇院粉请谨慎阅读**。
 
-7.存在中英文夹杂,存在中文网络流行语。
+7.存在中英文夹杂，存在中文网络流行语。
 
 8.存在大量私设。
 
@@ -56,19 +56,16 @@ id: 0000
 10.除了反派和龙套之外，没有人会死。
 
 
-
 假如您好奇心过于旺盛，再雷也忍不住要看，为保障您的生命与健康安全，请自行配备避雷针。
 
 <div style="background:#252525;padding:10px">
-<span class="heimu">
-如果尖锐的批评完全消失，温和的批评将会变得刺耳。如果温和的批评也不被允许，沉默将被认为居心叵测。如果沉默也不再允许，赞扬不够卖力将是一种罪行。如果只允许一种声音存在，那么，唯一存在的那个声音就是谎言。
+<span class="heimu">如果尖锐的批评完全消失，温和的批评将会变得刺耳。如果温和的批评也不被允许，沉默将被认为居心叵测。如果沉默也不再允许，赞扬不够卖力将是一种罪行。如果只允许一种声音存在，那么，唯一存在的那个声音就是谎言。
 </span>
 </div>
 </div>
 
 <center>
-
-[目录](../000-目录) [第一章](../001-第一章-你听我解释……算了)
+[目录](000-目录.html)&nbsp;&nbsp;&nbsp;&nbsp;[第一章](../001-第一章-你听我解释……算了)
 </center>
 
 <font color=gray size=2>
