修改md文件结构

--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/000-目录.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/000-目录.md
@@ -1,46 +1,34 @@
 ---
-# layout
-title: 目录
+layout: post
+title: 霍格沃茨禁止御剑飞行 目录
 author: 徐一玄Brenda
 date: 2020-03-10
-# updated
-# comments
+updated: 2020-05-04
+comments: false
 tags: [HP,哈利波特,无CP,斯莱文]
-categories: 霍格沃茨禁止御剑飞行
-# permalink
-id: 01-000
+categories:
+  - 同人
+  - 霍格沃茨禁止御剑飞行
+permalink: 000-目录
 ---
-<center>
-
-# 霍格沃茨禁止御剑飞行
-
-*by 徐一玄*
-
-</center>
-
-<br>
-
 <div style="margin:0 auto;width:300px;">
-<font color=gray size=2>
+[避雷预警](../0000-避雷预警)
 
+[第一章&nbsp;&nbsp;你听我解释……算了](../001-第一章-你听我解释……算了)
+
+[第二章&nbsp;&nbsp;“级长”选拔](../002-第二章-“级长”选拔)
+
+[第三章&nbsp;&nbsp;喜提禁闭](../003-第三章-喜提禁闭)
+
+[第四章&nbsp;&nbsp;厚颜无耻](../004-第四章-厚颜无耻)
+
+[第五章&nbsp;&nbsp;过于仁慈](../005-第五章-过于仁慈)
+
+[第六章&nbsp;&nbsp;雷电法王](../006-第六章-雷电法王)
+
+<font color=gray size=2>
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
 </font>
-
-## 目录
-
-[避雷预警](../0000-避雷预警)
-
-[第一章&nbsp;&nbsp;你听我解释……算了](../001-第一章-你听我解释……算了.html)
-
-[第二章&nbsp;&nbsp;“级长”选拔](../002-第二章-“级长”选拔.html)
-
-[第三章&nbsp;&nbsp;喜提禁闭](../003-第三章-喜提禁闭.html)
-
-[第四章&nbsp;&nbsp;厚颜无耻](../004-第四章-厚颜无耻.html)
-
-[第五章&nbsp;&nbsp;过于仁慈](../005-第五章-过于仁慈.html)
-
-*[@-@]:[第六章&nbsp;&nbsp;雷电法王](../006-第六章-雷电法王.html)
 </div>
