--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/0000_避雷预警.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/0000_避雷预警.md
@@ -9,8 +9,7 @@ tags: [HP,哈利波特,无CP,斯莱文]
 categories:
   - 同人
   - 霍格沃茨禁止御剑飞行
-# permalink
-id: "0000"
+permalink: 0000-避雷预警
 ---
 <font size=5 style="font-weight:bold">霍格沃茨禁止御剑飞行</font>
 
@@ -65,7 +64,7 @@ id: "0000"
 </div>
 
 <center>
-[目录](000-目录.html)&nbsp;&nbsp;&nbsp;&nbsp;[第一章](../001-第一章-你听我解释……算了)
+[目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp;[第一章](../001-第一章-你听我解释……算了)
 </center>
 
 <font color=gray size=2>
