--- a/source/_posts/blog/2020-5-14-Tetris.md
+++ b/source/_posts/blog/2020-5-14-Tetris.md
@@ -1,9 +1,10 @@
 ---
 title: Tetris
-categories: blog
+categories: 博文
 date: 2020-05-14 06:18:51
 update: 2020-05-14 10:39:42
-id: 20200514-06:18:51
+permalink: 2020-5-14-Tetris
+# id
 ---
-### Try to click [Tetris](./minigames/tetris.html)!
+### Try to click [Tetris](minigames/tetris.html)!
 更新测试。换库测试。
