--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
@@ -4,7 +4,7 @@ title: 第三章 喜提禁闭
 author: 徐一玄Brenda
 date: 2020-03-18 10:36:17
 updated: 2020-03-20 14:52:52
-comments： true
+comments: true
 tags: [HP,哈利波特,无CP,斯莱文]
 categories:
   - 同人
