--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/002-第二章-“级长”选拔.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/002-第二章-“级长”选拔.md
@@ -145,7 +145,7 @@ permalink: 002-第二章-“级长”选拔
 
 <center>
 
-[上一章](../001_第一章_你听我解释……算了)&nbsp;&nbsp;[目录](../000_目录)&nbsp;&nbsp;[下一章](../003_第三章_喜提禁闭)
+[上一章](../001-第一章-你听我解释……算了)&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;[下一章](../003-第三章-喜提禁闭)
 
 </center>
 <font color=gray size=2>
