--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/004-第四章-厚颜无耻.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/004-第四章-厚颜无耻.md
@@ -127,7 +127,7 @@ permalink: 004-第四章-厚颜无耻
 
 <center>
 
-[上一章](../003_第三章_喜提禁闭) [目录](../000_目录) [下一章](../005_第五章_过于仁慈)
+[上一章](../003-第三章-喜提禁闭) [目录](../000-目录) [下一章](../005-第五章-过于仁慈)
 </center>
 
 <font color=gray size=2>
