--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/001-第一章-你听我解释……算了.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/001-第一章-你听我解释……算了.md
@@ -149,7 +149,7 @@ permalink: 001-第一章-你听我解释……算了
 
 <center>
 
-[避雷预警](../0000_避雷预警)&nbsp;&nbsp;[目录](../000_目录)&nbsp;&nbsp;[下一章](../002_第二章_“级长”选拔)
+[避雷预警](../0000-避雷预警)&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;[下一章](../002-第二章-“级长”选拔)
 </center>
 
 <font color=gray size=2>
