--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
@@ -140,7 +140,7 @@ permalink: 003-第三章-喜提禁闭
 
 <center>
 
-[上一章](../002_第二章_“级长”选拔) [目录](../000_目录) [下一章](../004_第四章_厚颜无耻)
+[上一章](../002-第二章-“级长”选拔) [目录](../000-目录) [下一章](../004-第四章-厚颜无耻)
 </center>
 
 <font color=gray size=2>
