--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
@@ -8,7 +8,7 @@ comments: true
 tags: [HP,哈利波特,无CP,斯莱文]
 categories:
   - 同人
-  - 霍格沃茨禁止御剑飞行s
+  - 霍格沃茨禁止御剑飞行
 permalink: 005-第五章-过于仁慈
 ---
 
@@ -172,7 +172,7 @@ permalink: 005-第五章-过于仁慈
 
 <center>
 
-[上一章](../004_第四章_厚颜无耻) [目录](../000_目录) [已经是最新章节]
+[上一章](../004-第四章-厚颜无耻) [目录](../000-目录) [已经是最新章节]
 </center>
 
 <font color=gray size=2>
