--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
@@ -152,7 +152,7 @@ permalink: 005-第五章-过于仁慈
 本学院同年级全体学生的回避 get√
 本学院院长兼魔药课教授的嫌弃附赠一星期禁闭 get√。
 
-还有比这更惨的开局吗[滑稽]
+还有比这更惨的开局吗<img src="http://localhost:4000/uploads/huaji.png" />
 
 斯莱文：我十几岁，我好累.jpg
 
