--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/000-目录.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/000-目录.md
@@ -28,7 +28,7 @@ permalink: 000-目录
 
 [第五章&nbsp;&nbsp;过于仁慈](../005-第五章-过于仁慈)
 
-[第六章&nbsp;&nbsp;雷电法王](../006-第六章-雷电法王)
+第六章&nbsp;&nbsp;雷电法王(尚在创作中)
 
 <font color=gray size=2>
 Copyright & Disclaimer
