--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/001-第一章-你听我解释……算了.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/001-第一章-你听我解释……算了.md
@@ -125,6 +125,7 @@ permalink: 001-第一章-你听我解释……算了
 <div class="footnote">
 <font size=5>余音</font>
 
+---
 血人巴罗看了看斯莱文和马尔福之间两英尺的空位，满意地飘了过去。
 
 </div>
@@ -134,6 +135,7 @@ permalink: 001-第一章-你听我解释……算了
 <div class="footnote">
 <font size=5>注释</font>
 
+---
 <span id="[1]">[[1]](#[1]原文)原著中，分院仪式的名单按姓氏字母排序，斯莱文应排在中间。此处为方便描写将他放到最后一位，就当是异国学生比较特殊吧。
 参见《哈利·波特与魔法石》第七章 分院帽
 
@@ -149,10 +151,11 @@ permalink: 001-第一章-你听我解释……算了
 
 <center>
 
-[避雷预警](../0000-避雷预警)&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;[下一章](../002-第二章-“级长”选拔)
+[避雷预警](../0000-避雷预警)&nbsp;&nbsp;&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp;[下一章](../002-第二章-“级长”选拔)
 </center>
 
 <font color=gray size=2>
+
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
