--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/002-第二章-“级长”选拔.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/002-第二章-“级长”选拔.md
@@ -120,6 +120,7 @@ permalink: 002-第二章-“级长”选拔
 <div class=footnote>
 <font size=5>余音</font>
 
+---
 斯莱文：入学第一天遭遇校园霸凌，现在在脑门上贴个条写“我是纯血”还有用吗？急，在线等。
 
 </div>
@@ -129,6 +130,7 @@ permalink: 002-第二章-“级长”选拔
 <div class=footnote>
 <font size=5>注释</font>
 
+---
 <span id="[1]">[[1]](#[1]原文)此处对公共休息室的描述同时参考了原著和电影场景。
 (哈利·波特与密室-第十二章 复方汤剂)
 
@@ -145,10 +147,11 @@ permalink: 002-第二章-“级长”选拔
 
 <center>
 
-[上一章](../001-第一章-你听我解释……算了)&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;[下一章](../003-第三章-喜提禁闭)
+[上一章](../001-第一章-你听我解释……算了)&nbsp;&nbsp;&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp;[下一章](../003-第三章-喜提禁闭)
 
 </center>
 <font color=gray size=2>
+
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
