--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
@@ -114,6 +114,7 @@ permalink: 003-第三章-喜提禁闭
 <div class=footnote>
 <font size=5>余音</font>
 
+---
 哈利不急，等他烦死德拉科之后会来烦你的23333
 
 </div>
@@ -123,6 +124,7 @@ permalink: 003-第三章-喜提禁闭
 <div class=footnote>
 <font size=5>注释</font>
 
+---
 <span id="[1]">[[1]](#[1]原文)即霍格沃茨学生校服。出自录取信中所附的必备用品清单。
 参见《哈利·波特与魔法石》第五章 对角巷
 
@@ -140,10 +142,11 @@ permalink: 003-第三章-喜提禁闭
 
 <center>
 
-[上一章](../002-第二章-“级长”选拔) [目录](../000-目录) [下一章](../004-第四章-厚颜无耻)
+[上一章](../002-第二章-“级长”选拔)&nbsp;&nbsp;&nbsp;&nbsp; [目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp;[下一章](../004-第四章-厚颜无耻)
 </center>
 
 <font color=gray size=2>
+
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
