--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/004-第四章-厚颜无耻.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/004-第四章-厚颜无耻.md
@@ -110,6 +110,7 @@ permalink: 004-第四章-厚颜无耻
 <div class=footnote>
 <font size=5>余音</font>
 
+---
 斯莱文：我不是，我没有，听我解释Σ(っ°Д°;)っ
 
 </div>
@@ -119,6 +120,7 @@ permalink: 004-第四章-厚颜无耻
 <div class=footnote>
 <font size=5>注释</font>
 
+---
 <span id="[1]">[[1]](#[1]原文)参见《哈利·波特与密室》第十三章 绝密日记
 
 </div>
@@ -127,10 +129,11 @@ permalink: 004-第四章-厚颜无耻
 
 <center>
 
-[上一章](../003-第三章-喜提禁闭) [目录](../000-目录) [下一章](../005-第五章-过于仁慈)
+[上一章](../003-第三章-喜提禁闭)&nbsp;&nbsp;&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp; [下一章](../005-第五章-过于仁慈)
 </center>
 
 <font color=gray size=2>
+
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
