--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
@@ -144,6 +144,7 @@ permalink: 005-第五章-过于仁慈
 <div class="footnote">
 <font size=5>余音</font>
 
+---
 开学第一天即将结束，整理一下斯莱文目前的成就：
 
 本学院期七个年级全体学生的蔑视 get√
@@ -163,6 +164,7 @@ permalink: 005-第五章-过于仁慈
 <div class="footnote">
 <font size=5>注释</font>
 
+---
 <span id="[1]">[[1]](#[1]原文)“斯内普刚进校时，他知道的咒语就比七年级的半数学生都多，他还是一个斯莱特林团伙的成员，后来那个团伙里的人几乎都变成了食死徒。”——小天狼星·布莱克
 参见《哈利·波特与火焰棒》第二十七章 大脚板回来了
 
@@ -172,10 +174,11 @@ permalink: 005-第五章-过于仁慈
 
 <center>
 
-[上一章](../004-第四章-厚颜无耻) [目录](../000-目录) [已经是最新章节]
+[上一章](../004-第四章-厚颜无耻)&nbsp;&nbsp;&nbsp;&nbsp; [目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp; [未完待续]
 </center>
 
 <font color=gray size=2>
+
 Copyright & Disclaimer
 本文为《哈利·波特》（[英] J.K.罗琳 著）系列小说的衍生同人作品。
 谢绝一切形式转载。引用请注明作者 徐一玄 并附上原文链接。
