增加搜索、标签云功能，增加网页背景

--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/0000_避雷预警.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/0000_避雷预警.md
@@ -37,7 +37,7 @@ permalink: 0000-避雷预警
 这届学生中，理论最强无疑是赫敏。
 应用实践最强也是赫敏。
 战斗实践最强是哈利。
-男主的理论和实践都在中上水平，但他**脑子里有坑、天赋树点歪、还头铁**。
+男主的理论和实践都不是最强，但他**脑子里有坑、天赋树点歪、还头铁**。
 
 4.再次强调，男主**头不是一般的铁**。
 
@@ -67,7 +67,7 @@ permalink: 0000-避雷预警
 <br>
 <center>
 
-[目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp;[第一章](../001-第一章-你听我解释……算了)
+[目录](../000-目录)&nbsp;&nbsp;[第一章](../001-第一章-你听我解释……算了)
 </center>
 
 <font color=gray size=2>
