--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/005-第五章-过于仁慈.md
@@ -153,8 +153,7 @@ permalink: 005-第五章-过于仁慈
 本学院同年级全体学生的回避 get√
 本学院院长兼魔药课教授的嫌弃附赠一星期禁闭 get√。
 
-还有比这更惨的开局吗
-<img src="http://localhost:4000/uploads/huaji.png" />
+还有比这更惨的开局吗<img style="float:left;" src="/uploads/comical.png" />
 
 斯莱文：我十几岁，我好累.jpg
 
@@ -167,7 +166,7 @@ permalink: 005-第五章-过于仁慈
 
 ---
 <span id="[1]">[[1]](#[1]原文)“斯内普刚进校时，他知道的咒语就比七年级的半数学生都多，他还是一个斯莱特林团伙的成员，后来那个团伙里的人几乎都变成了食死徒。”——小天狼星·布莱克
-参见《哈利·波特与火焰棒》第二十七章 大脚板回来了
+参见《哈利·波特与火焰杯》第二十七章 大脚板回来了
 
 </div>
 
@@ -175,7 +174,7 @@ permalink: 005-第五章-过于仁慈
 
 <center>
 
-[上一章](../004-第四章-厚颜无耻)&nbsp;&nbsp;&nbsp;&nbsp; [目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp; [未完待续]
+[上一章](../004-第四章-厚颜无耻)&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;[未完待续]
 </center>
 
 <font color=gray size=2>
