--- a/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
+++ b/source/_posts/fanfic/霍格沃茨禁止御剑飞行/003-第三章-喜提禁闭.md
@@ -142,7 +142,7 @@ permalink: 003-第三章-喜提禁闭
 
 <center>
 
-[上一章](../002-第二章-“级长”选拔)&nbsp;&nbsp;&nbsp;&nbsp; [目录](../000-目录)&nbsp;&nbsp;&nbsp;&nbsp;[下一章](../004-第四章-厚颜无耻)
+[上一章](../002-第二章-“级长”选拔)&nbsp;&nbsp;[目录](../000-目录)&nbsp;&nbsp;[下一章](../004-第四章-厚颜无耻)
 </center>
 
 <font color=gray size=2>
